Отработка замечаний по результатам ревью